--- a/index.html
+++ b/index.html
@@ -261,5 +261,7 @@
                 <p>&#169; 2021 copyright all right reserved</p>
             </div>
         </footer>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="./js/scroll.js"></script>
     </body>
 </html>
