--- a/index.html
+++ b/index.html
@@ -262,6 +262,6 @@
             </div>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="./js/scroll.js"></script>
+        <script src="/js/scroll.js"></script>
     </body>
 </html>
