--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Jordy Sinaulan</title>
+        <title>Jordy</title>
         <link rel="stylesheet" href="styles.css" />
         <link
             rel="stylesheet"
@@ -17,7 +17,7 @@
     <body>
         <section id="main">
             <div class="main-center">
-                <h1>Misael Jordy Sinaulan</h1>
+                <h1>Misael Jordy</h1>
                 <div class="socials">
                     <ul>
                         <li>
@@ -52,7 +52,7 @@
                 <div class="user">
                     <img src="./images/profile-pic.png" alt="" width="256px" />
                     <div class="user-details">
-                        <h3>Misael Jordy Sinaulan</h3>
+                        <h3>Misael Jordy</h3>
                         <p>Computer Science Student</p>
                     </div>
                 </div>
@@ -68,11 +68,11 @@
                         </div>
                         <div class="pd">
                             <p>Address</p>
-                            <p class="pd-r">Tareran, Minahasa Selatan</p>
+                            <p class="pd-r">Bedok, Bedok</p>
                         </div>
                         <div class="pd">
                             <p>Nationality</p>
-                            <p class="pd-r">Indonesia</p>
+                            <p class="pd-r">Singapore</p>
                         </div>
                         <div class="pd">
                             <p>Religion</p>
@@ -90,7 +90,7 @@
                                     <div class="item-title">
                                         <span>SD Advent Talaitad</span>
                                         <br />
-                                        Suluun Taretan, Minahasa Selatan
+                                        Minahasa selatan, Indonesia
                                     </div>
                                 </li>
                                 <li class="rb-item" ng-repeat="itembx">
@@ -98,9 +98,9 @@
                                         2014 - 2017<br />
                                     </div>
                                     <div class="item-title">
-                                        <span>SMP Negeri 2 Suluun Tareran</span>
+                                        <span>Bedok Green Secondary School</span>
                                         <br />
-                                        Suluun Tareran, Minahasa Selatan
+                                        Bedok, Singapore
                                     </div>
                                 </li>
                                 <li class="rb-item" ng-repeat="itembx">
@@ -108,8 +108,8 @@
                                         2017 - 2020<br />
                                     </div>
                                     <div class="item-title">
-                                        <span>SMK Negeri 1 Tareran</span><br />
-                                        Tareran, Minahasa Selatan
+                                        <span>Sekolah Kristen Kanaan</span><br />
+                                        Jakarta Barat, Indonesia
                                     </div>
                                 </li>
                                 <li class="rb-item" ng-repeat="itembx">
@@ -235,7 +235,7 @@
         </section>
         <footer>
             <div class="footer-container">
-                <h2>Misael Jory Sinaulan</h2>
+                <h2>Misael Jordy</h2>
                 <ul>
                     <li>
                         <a href="#"
